@@ -5,6 +5,8 @@
 package com.serotonin.m2m2.web.mvc.rest.v1.model.publisher;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.serotonin.m2m2.Common;
+import com.serotonin.m2m2.db.dao.DataPointDao;
 import com.serotonin.m2m2.vo.publish.PublishedPointVO;
 import com.serotonin.m2m2.web.mvc.rest.v1.csv.CSVColumnGetter;
 import com.serotonin.m2m2.web.mvc.rest.v1.csv.CSVColumnSetter;
@@ -17,6 +19,8 @@ import com.wordnik.swagger.annotations.ApiModelProperty;
  */
 public abstract class AbstractPublishedPointModel<T extends PublishedPointVO> extends AbstractRestModel<T> {
 
+    @JsonIgnore
+    private String missingXid; 
 	
 	/**
 	 * @param data
@@ -35,13 +39,25 @@ public abstract class AbstractPublishedPointModel<T extends PublishedPointVO> ex
 	@CSVColumnSetter(order=0, header="modelType")
 	public void setModelType(String typeName){ }
 	
+	//using name 'dataPointId' despite it being XID to be consistent with PublisherPointVO export
 	@CSVColumnGetter(order=1, header="dataPointId")
-	public int getDataPointId(){
-		return this.data.getDataPointId();
+	public String getDataPointId(){
+		return DataPointDao.instance.getXidById(this.data.getDataPointId());
 	}
 	@CSVColumnSetter(order=1, header="dataPointId")
-	public void setDataPointId(int dataPointId){
-		this.data.setDataPointId(dataPointId);
+	public void setDataPointId(String dataPointId){
+	    Integer dpid = DataPointDao.instance.getIdByXid(dataPointId);
+	    if(dpid == null) { //also the case if dataPointId is null
+	        this.data.setDataPointId(Common.NEW_ID);
+	        missingXid = dataPointId;
+	    } else
+	        this.data.setDataPointId(dpid.intValue());
+	}
+	
+	//Used to provide a meaningful validation message
+	@JsonIgnore
+	public String getMissingXid() {
+	    return missingXid;
 	}
 	
 	/**
